--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,25 @@
   padding: 0;
 }
 
+
 html,
 body {
   height: 100%;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
+}
+body {
+  position: relative;
 }
 
 #container {
   display: flex;
   background-color: black;
-  height: 100%;
+  height: 200%;
   align-items: center;
   flex-direction: column;
+  scroll-behavior: unset;
 
 }
 
@@ -42,7 +48,7 @@ header {
 }
 #board{
   display:grid;
-  grid-template-columns: repeat(25, 1fr);
+  /* grid-template-columns: repeat(25, 1fr); */
   grid-gap: 2px;
   padding:10px;
   box-sizing: border-box;
@@ -95,3 +101,4 @@ header {
   from{background-color: black;}
   to {background-color: cyan;}
 }
+
