--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,13 @@ header {
   font-family: 'Courier New', Courier, monospace;
 
 }
+#clearbutton{
+  background-color: cyan;
+  font-size: 20px;
+  min-width: 100px;
+  background-image: 'url(start.jpg)';
+  font-family: 'Courier New', Courier, monospace;
+}
 
 @keyframes gray_to_black {
   from {background-color: gray;}
